==> ZhangStudyLife/CYT4BB7_Air/libraries/zf_driver/zf_driver_uart.c <==
#include "system/system_cyt4bb.h"
#include "sysclk/cy_sysclk.h"
#include "gpio/cy_gpio.h"
#include "zf_common_interrupt.h"
#include "zf_common_debug.h"
#include "zf_driver_gpio.h"
#include "zf_driver_uart.h"
#define UART_FREQ       CY_INITIAL_TARGET_PERI_FREQ                             // 串口模块时钟 默认80M
#define UART_USE_ISR    CPUIntIdx3_IRQn

void uart_write_byte (uart_index_enum uart_n, const uint8 dat)
{
    Cy_SCB_WriteTxFifo(scb_module[uart_n], dat);	
    while(Cy_SCB_IsTxComplete(scb_module[uart_n]) == 0);
}

uint8 uart_read_byte (uart_index_enum uart_n)
{
    while(Cy_SCB_GetNumInRxFifo(scb_module[uart_n]) == 0);
    return (uint8)Cy_SCB_ReadRxFifo(scb_module[uart_n]);	
}

uint8 uart_query_byte (uart_index_enum uart_n, uint8 *dat)
{
    uint8 return_data = 0;
    
    if(Cy_SCB_GetNumInRxFifo(scb_module[uart_n]))
    {
        *dat = (uint8_t)Cy_SCB_ReadRxFifo(scb_module[uart_n]);
        return_data = 1;
    }
    else
    {
        return_data = 0;
    }
    return return_data;
}

void uart_tx_interrupt (uart_index_enum uart_n, uint32 status)
{
    
    Cy_SCB_SetTxInterruptMask(scb_module[uart_n], Cy_SCB_GetTxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_TX_TRIGGER);
    Cy_SCB_SetTxInterruptMask(scb_module[uart_n], Cy_SCB_GetTxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_TX_NOT_FULL);
    Cy_SCB_SetTxInterruptMask(scb_module[uart_n], Cy_SCB_GetTxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_TX_OVERFLOW);
    Cy_SCB_SetTxInterruptMask(scb_module[uart_n], Cy_SCB_GetTxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_TX_UNDERFLOW);
    Cy_SCB_SetTxInterruptMask(scb_module[uart_n], Cy_SCB_GetTxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_TX_EMPTY);
    Cy_SCB_SetTxInterruptMask(scb_module[uart_n], Cy_SCB_GetTxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_TX_NACK);
    Cy_SCB_SetTxInterruptMask(scb_module[uart_n], Cy_SCB_GetTxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_TX_ARB_LOST);
    if(status)
    {
        Cy_SCB_SetTxInterruptMask(scb_module[uart_n], Cy_SCB_GetRxInterruptMask(scb_module[uart_n]) | CY_SCB_UART_TX_DONE);
    }
    else
    {
        Cy_SCB_SetTxInterruptMask(scb_module[uart_n], Cy_SCB_GetRxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_TX_DONE);
    }	
}

void uart_rx_interrupt (uart_index_enum uart_n, uint32 status)
{
    Cy_SCB_SetRxInterruptMask(scb_module[uart_n], Cy_SCB_GetRxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_RX_TRIGGER);
    Cy_SCB_SetRxInterruptMask(scb_module[uart_n], Cy_SCB_GetRxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_RX_FULL);
    Cy_SCB_SetRxInterruptMask(scb_module[uart_n], Cy_SCB_GetRxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_RX_OVERFLOW);
    Cy_SCB_SetRxInterruptMask(scb_module[uart_n], Cy_SCB_GetRxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_RX_ERR_FRAME);
    Cy_SCB_SetRxInterruptMask(scb_module[uart_n], Cy_SCB_GetRxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_RX_ERR_PARITY);
    Cy_SCB_SetRxInterruptMask(scb_module[uart_n], Cy_SCB_GetRxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_RX_BREAK_DETECT);
    if(status)
    {
        Cy_SCB_SetRxInterruptMask(scb_module[uart_n], Cy_SCB_GetRxInterruptMask(scb_module[uart_n]) | CY_SCB_UART_RX_NOT_EMPTY);
    }
    else
    {
        Cy_SCB_SetRxInterruptMask(scb_module[uart_n], Cy_SCB_GetRxInterruptMask(scb_module[uart_n]) & ~CY_SCB_UART_RX_NOT_EMPTY);
    }	
}

void uart_init (uart_index_enum uart_n, uint32 baud, uart_tx_pin_enum tx_pin, uart_rx_pin_enum rx_pin)
{
    // 醒醒，串口号和端口都不对应怎么能初始化呢？
	
    zf_assert((uint8)uart_n == (uint8)tx_pin ? 1 : 0);
    zf_assert((uint8)uart_n == (uint8)rx_pin ? 1 : 0);
    
    uart_config_struct          uart_pin_config                 = {0};
    cy_stc_gpio_pin_config_t    gpio_pin_config                 = {0};
    cy_stc_scb_uart_config_t    g_stc_uart_config               = {0};
    uint64_t                    targetFreq                      = 8 * baud;
    uint64_t                    sourceFreq_fp5                  = ((uint64_t)UART_FREQ << 5ull);
    uint32_t                    divSetting_fp5                  = (uint32_t)(sourceFreq_fp5 / targetFreq);
    
    get_uart_config(&uart_pin_config, tx_pin, rx_pin);
    
    gpio_pin_config.driveMode           = CY_GPIO_DM_HIGHZ;
    gpio_pin_config.hsiom               = uart_pin_config.rx_hsiom;
    Cy_GPIO_Pin_Init(uart_pin_config.rx_port, uart_pin_config.rx_pin, &gpio_pin_config);
    
    gpio_pin_config.driveMode           = CY_GPIO_DM_STRONG_IN_OFF;
    gpio_pin_config.hsiom               = uart_pin_config.rx_hsiom;
    Cy_GPIO_Pin_Init(uart_pin_config.tx_port, uart_pin_config.tx_pin, &gpio_pin_config);

    
    g_stc_uart_config.uartMode          = CY_SCB_UART_STANDARD;
    g_stc_uart_config.oversample        = 8;
    g_stc_uart_config.dataWidth         = 8;
    g_stc_uart_config.stopBits          = CY_SCB_UART_STOP_BITS_1;
    g_stc_uart_config.parity            = CY_SCB_UART_PARITY_NONE;
    g_stc_uart_config.ctsPolarity       = CY_SCB_UART_ACTIVE_LOW;  
    g_stc_uart_config.rtsPolarity       = CY_SCB_UART_ACTIVE_LOW;
    
    Cy_SCB_UART_DeInit(scb_module[uart_n]);
    Cy_SCB_UART_Init(scb_module[uart_n], &g_stc_uart_config, &uart_context[uart_n]);
    Cy_SCB_UART_Enable(scb_module[uart_n]);  
    
    Cy_SysClk_PeriphAssignDivider(uart_pin_config.uart_pclk, CY_SYSCLK_DIV_24_5_BIT, (uint8)uart_n);
    Cy_SysClk_PeriphSetFracDivider(Cy_SysClk_GetClockGroup(uart_pin_config.uart_pclk), CY_SYSCLK_DIV_24_5_BIT, (uint8)uart_n, ((divSetting_fp5 & 0x1FFFFFE0ul) >> 5ul), (divSetting_fp5 & 0x0000001Ful));
    Cy_SysClk_PeriphEnableDivider(Cy_SysClk_GetClockGroup(uart_pin_config.uart_pclk), CY_SYSCLK_DIV_24_5_BIT, (uint8)uart_n);
    
    cy_stc_sysint_irq_t                 uart_irq_cfg;
    uart_irq_cfg.sysIntSrc = uart_pin_config.uart_irqn;
    uart_irq_cfg.intIdx    = UART_USE_ISR;
    uart_irq_cfg.isEnabled = true;
    interrupt_init(&uart_irq_cfg, uart_isr_func[uart_n], 7);
    
    uart_rx_interrupt(uart_n, 0);
    uart_tx_interrupt(uart_n, 0);
}
